--- a/local/src_v6/core/main/variables/style.scss
+++ b/local/src_v6/core/main/variables/style.scss
@@ -77,7 +77,7 @@ $body-bg-outer-color:               $brand-gray-4;
 $headings-color:                    $brand-gray-10;
 $text-color:                        $brand-black;
 $text-footer-color:                 $brand-gray-11;
-$disabled-color:                    $brand-gray-2;
+$disabled-color:                    #ccc;
 
 $link-color:                        $brand-gray-12;
 $link-color-hover:                  rgba($brand-gray-12, .8);
