--- a/local/src_v6/pages/proj/index.pug
+++ b/local/src_v6/pages/proj/index.pug
@@ -11,6 +11,7 @@ block content
   include ../../components/pages/index/sl-products/index
   //include ../../components/pages/index/card-links-3/index
   include ../../components/pages/index/main-blog/index
+block contentBottom
   include ../../components/footer/subscription/index
 block popup
   include ../../components/modals/fast-buy-modal/index
