--- a/local/templates/.default/etalon.html
+++ b/local/templates/.default/etalon.html
@@ -1113,16 +1113,15 @@
 								</div>
 								<p>На противоположном торце — упругая которые представляют собой «простой прямоугольник с закругленными углами», Yoga Tablet 10 получил индивидуальные черты. В первую очередь это цилиндрический выступ в нижней (если ориентироваться на расположение логотипа) части устройства. Он выполняет сразу несколько функций: скрывает емкую встроенную батарею на 9000 мАч, используется в качестве «ножки», когда Yoga Tablet 10 лежит на столе, и «ручки», когда планшет выступает в качестве электронной книги.Здесь же расположилась откидная подставка — еще одна ключевая особенность аппарата. Она позволяет Габариты планшета — 261×180×8 мм (ширина указана без учета батареи). Задняя крышка корпуса выполнена из текстурированного пластика, материал подставки — алюминий. Пластик приятен на ощупь, устройство не выскальзывает из рук, однако кромка с противоположной от подставки стороны достаточно быстро истирается. Это приводит к появлению небольших «проплешин» в рисунке задней крышки, но увидеть их можно только присмотревшись.</p>
 								<h2>Responsive image</h2><img src="img/tmp/img.jpg" alt="alt">
-								<nav>
+								<nav class="pagination-wrap">
 									<ul class="pagination list-reset">
-										<li class="page-item disabled"><span class="page-link prev"></span></li>
-										<li class="page-item active"><a class="page-link" href="#">1<span class="sr-only">(current)</span></a></li>
-										<li class="page-item"><a class="page-link" href="#">2</a></li>
-										<li class="page-item"><a class="page-link" href="#">3</a></li>
-										<li class="page-item"><a class="page-link" href="#">4</a></li>
-										<li class="page-item hover"><a class="page-link" href="#">5</a></li>
-										<li class="page-item"><a class="page-link" href="#">6</a></li>
-										<li class="page-item"><a class="page-link next" href="#"></a></li>
+										<li class="page-item disabled"><span class="page-link prev"><span>пред</span></span></li>
+										<li class="page-item active"><a class="page-link" href="#"><span>2</span></a></li>
+										<li class="page-item"><a class="page-link" href="#"><span>3</span></a></li>
+										<li class="page-item"><a class="page-link" href="#"><span>4</span></a></li>
+										<li class="page-item hover"><a class="page-link" href="#"><span>5</span></a></li>
+										<li class="page-item"><a class="page-link" href="#"><span>6</span></a></li>
+										<li class="page-item"><a class="page-link next" href="#"><span>след</span></a></li>
 									</ul>
 								</nav>
 								<ul class="pager list-reset text-center">
