--- a/local/src_v6/components/base/pagination/index.pug
+++ b/local/src_v6/components/base/pagination/index.pug
@@ -1,20 +1,23 @@
-nav
+nav.pagination-wrap
   ul.pagination.list-reset
     li.page-item.disabled
       span.page-link.prev
+        span пред
     li.page-item.active
       a.page-link(href='#')
-        | 1
-        span.sr-only (current)
+        span 2
     li.page-item
-      a.page-link(href='#') 2
+      a.page-link(href='#')
+        span 3
     li.page-item
-      a.page-link(href='#') 3
-    li.page-item
-      a.page-link(href='#') 4
+      a.page-link(href='#')
+        span 4
     li.page-item.hover
-      a.page-link(href='#') 5
+      a.page-link(href='#')
+        span 5
     li.page-item
-      a.page-link(href='#') 6
+      a.page-link(href='#')
+        span 6
     li.page-item
       a.page-link.next(href='#')
+        span след
