--- a/local/src_v6/pages/proj/catalog.pug
+++ b/local/src_v6/pages/proj/catalog.pug
@@ -3,11 +3,14 @@ block pageVars
   - DB.pageTitle = 'Каталог';
 block title
   h1.hidden#title H1 Заголовок страницы. В магазинах начался сезон скидок
+block aside
+  include ../../components/pages/catalog/catalog-filters/index
 block content
   .d-none.d-lg-block
     include ../../components/pages/catalog/full-catalog-sort/index
   include ../../components/pages/catalog/card-links-3/index
   include ../../components/base/pagination/index
+block contentBottom
   include ../../components/footer/subscription/index
 block popup
   include ../../components/modals/fast-buy-modal/index
