--- a/local/src_v6/components/block/categories/index.pug
+++ b/local/src_v6/components/block/categories/index.pug
@@ -1,12 +1,25 @@
 mixin categories(data)
   .categories
-    if (data.title)
-      .categories__title #{data.title}
-    if (data.list)
-      .categories__list
-        each item, index in data.list
-          .categories__item
-            .categories__checkbox.checkbox
-              label.categories__label
-                input.categories__input.ui-checkbox(type='checkbox', name=('category_' + index))
-                span.categories__name #{item}
+    each el in data.blocks
+      .categories__block
+        if (el.title)
+          .categories__title #{el.title}
+        if (el.list)
+          .categories__list
+            each item, index in el.list
+              .categories__item
+                .categories__checkbox.checkbox
+                  label.categories__label
+                    input.categories__input.ui-checkbox(type='checkbox', name=('category_' + index))
+                    span.categories__name #{item}
+        if (el.inputs)
+          .categories__fromTo
+            .categories__fromTo-row.row
+              .categories__fromTo-col
+                label
+                  span от
+                  input.form-control(type='text', required='', aria-required='true')
+              .categories__fromTo-col
+                label
+                  span до
+                  input.form-control(type='text', required='', aria-required='true')
