--- a/local/src_v6/components/block/categories/style.scss
+++ b/local/src_v6/components/block/categories/style.scss
@@ -1,18 +1,51 @@
 .categories {
-  margin: 0 0 2.1rem;
+
+  &__block {
+    margin-bottom: 44px;
+  }
 
   &__title {
-    margin: 0 0 1.9rem;
     color: $brand-black;
-    font-size: 1.8rem;
-    line-height: 1.25;
+    font-size: 22px;
+    line-height: 1.27;
+    margin: 0 0 24px;
   }
 
   &__item {
-    margin: 0 0 1.0rem;
+    margin: 0 0 7px;
 
     &:last-child {
       margin-bottom: 0;
+    }
+  }
+
+  &__fromTo {
+
+    &-row {
+      margin-left: -5px;
+      margin-right: -5px;
+    }
+
+    &-col {
+      padding-left: 5px;
+      padding-right: 5px;
+    }
+
+    label {
+      display: flex;
+      flex-wrap: wrap;
+      margin-bottom: 0;
+      font-size: 16px;
+
+      span {
+        padding-top: 6px;
+        margin-right: 5px;
+      }
+    }
+
+    input {
+      width: 80px;
+      padding: 9px 10px 9px;
     }
   }
 }
