--- a/local/src_v6/components/footer/subscription/style.scss
+++ b/local/src_v6/components/footer/subscription/style.scss
@@ -1,9 +1,9 @@
 .subscription {
   position: relative;
-  margin: 0 0 43px;
+  margin: 0 0 60px;
 
   @media (max-width: $screen-sm-max) {
-    margin-bottom: 25px;
+    margin-bottom: 40px;
   }
 
   .title {
@@ -12,7 +12,7 @@
     text-align: center;
     margin-bottom: 60px;
 
-    @media (max-width: $screen-xs-max) {
+    @media (max-width: $screen-sm-max) {
       font-size: 20px;
       margin-bottom: 15px;
     }
